--- a/views/node.jade
+++ b/views/node.jade
@@ -14,11 +14,10 @@ html
         script(src="javascripts/bootstrap.min.js")
 
         <!-- This page script -->
-        script(src="javascripts/tables/admin.js")
+        script(src="javascripts/tables/node.js")
 
     body
         block content
-
             button(class="btn btn-primary")
                 a(href="admins" class="text-white") Меню
             br
@@ -35,7 +34,6 @@ html
                             input(class="form-control" type="text" placeholder=i)
             br
             button(id="addButton" class="btn btn-primary") Добавить
-
             br
             br
             div(style="display: block") Иcкать по id
