--- a/views/robot.jade
+++ b/views/robot.jade
@@ -14,7 +14,7 @@ html
         script(src="javascripts/bootstrap.min.js")
 
         <!-- This page script -->
-        script(src="javascripts/tables/admin.js")
+        script(src="javascripts/tables/robot.js")
 
     body
         block content
@@ -62,7 +62,7 @@ html
                                     else
                                         div(col = i, contenteditable) #{d[i]}
                             td
-                                button(class="btn btn-primary") Сохранить
+                                button(class="btn btn-primary") Сохранть
                             td
                                 button(class="btn btn-danger") Удалить
 
