--- a/views/room.jade
+++ b/views/room.jade
@@ -14,7 +14,7 @@ html
         script(src="javascripts/bootstrap.min.js")
 
         <!-- This page script -->
-        script(src="javascripts/tables/admin.js")
+        script(src="javascripts/tables/room.js")
 
     body
         block content
