--- a/views/users.jade
+++ b/views/users.jade
@@ -14,7 +14,7 @@ html
         script(src="javascripts/bootstrap.min.js")
 
         <!-- This page script -->
-        script(src="javascripts/tables/admin.js")
+        script(src="javascripts/tables/users.js")
 
     body
         block content
@@ -57,7 +57,7 @@ html
                         tr
                             each i in dataIndexes
                                 td
-                                    if( i === "_id")
+                                    if( i === "_id" || i === "admin")
                                         div(col = i) #{d[i]}
                                     else
                                         div(col = i, contenteditable) #{d[i]}
@@ -65,6 +65,11 @@ html
                                 button(class="btn btn-primary") Сохранить
                             td
                                 button(class="btn btn-danger") Удалить
+                            td
+                                if(data['admin'] === "Yes")
+                                    button(class="btn btn-info") Make Default
+                                else
+                                    button(class="btn btn-info") Make Admin
 
 
 
