Общение девайсов и сервера

--- a/views/admins.jade
+++ b/views/admins.jade
@@ -20,7 +20,7 @@ html
 
                             if(isAdmin)
 
-                                span(class="login100-form-title p-b-53") Выберите табличку
+                                span(class="login100-form-title p-b-53") Выберите справочник
 
                                 div(class="row")
                                     a(href="area" class="btn-google m-b-20 ")
